# leetcode-coach

./: .gitignore  Dockerfile  README.md  VISION.md  pyproject.toml
.claude/: launch.json
coach/: __init__.py  api.py  cli.py  coach.py  llm.py  review.py  roadmap.py  store.py
coach/data/: neetcode-150.json
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  api.ts  styles.css
web/src/views/: Problems.tsx  Progress.tsx  Today.tsx
