[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "leetcode-coach"
version = "0.1.0"
description = "An AI coach that decides exactly what LeetCode problem you should practice each day."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40",
]

[project.scripts]
leetcode-coach = "coach.cli:main"

[tool.setuptools]
packages = ["coach"]

[tool.setuptools.package-data]
coach = ["data/*.json"]
